# RoxeChain

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  IMPORTANT.md  README.md  actc.doxygen.in  actc.version.in  actc_build.sh  actc_install.sh  actc_uninstall.sh  dcc.doxygen.in  dccio.version.in  dccio_build.sh  dccio_install.sh  dccio_uninstall.sh  gls_install.sh  pipeline.jsonc  roxe.doxygen.in  roxe.version.in  roxe_build.sh  roxe_install.sh  roxe_uninstall.sh  testnet.md  testnet.template
actc.cdt/examples/hello/: CMakeLists.txt  README.txt
actc.cdt/examples/multi_index_example/: CMakeLists.txt  README.txt
actc.cdt/examples/send_inline/: CMakeLists.txt  README.txt
actc.cdt/libraries/actclib/: CMakeLists.txt  actc.hpp  actclib.cpp  action.h  action.hpp  asset.hpp  binary_extension.hpp  chain.h  contract.hpp  crypto.cpp  crypto.h  crypto.hpp  datastream.hpp  db.h  dispatcher.hpp  fixed_bytes.hpp  ignore.hpp  malloc.cpp  multi_index.hpp  name.hpp  permission.h  permission.hpp  print.h  print.hpp  privileged.h  privileged.hpp  producer_schedule.hpp  public_key.hpp  serialize.hpp  simple_malloc.cpp  singleton.hpp  symbol.hpp  system.h  system.hpp  time.hpp  transaction.h  transaction.hpp  types.h  varint.hpp
actc.cdt/tests/integration/: CMakeLists.txt  codegen_tests.cpp  contracts.hpp.in  main.cpp  memory_tests.cpp
actc.contracts/: CMakeLists.txt  CONTRIBUTING.md  IMPORTANT.md  README.md  build.sh  docs.json
actc.contracts/contracts/: CMakeLists.txt
actc.contracts/contracts/actc.system/: CMakeLists.txt  README.md  actc.system.cpp  delegate_bandwidth.cpp  exchange_state.hpp  producer_pay.cpp  voting.cpp
actc.contracts/contracts/actc.token/: CMakeLists.txt  actc.token.abi  actc.token.cpp
actc.contracts/contracts/actc.wrap/: CMakeLists.txt
actc.contracts/docker/: buildContracts.sh  unit-test.sh  verifyInstallation.sh
actc.contracts/docs/: 02_build-and-deploy.md  index.md
actc.contracts/docs/03_guides/: 01_upgrading-the-actc.system-contract.md  02_how-to-buy-ram.md  03_how-to-stake.md  04_how-to-vote.md  05_how-to-create-issue-and-transfer-a-token.md  06_how-to-sign-a-multisig-transaction-with-actc.msig.md  07_how-to-use-actc.wrap.md
actc.contracts/hello/: CMakeLists.txt  hello.cpp
actc.contracts/identity/: common.cpp  common.hpp  identity.abi  identity.cpp
actc.contracts/identity/test/: CMakeLists.txt
actc.contracts/integration_test/: CMakeLists.txt
actc.contracts/multi_index_test/: CMakeLists.txt  multi_index_test.cpp
actc.contracts/musl/: CMakeLists.txt
actc.contracts/noop/: noop.cpp
actc.contracts/skeleton/: skeleton.hpp
actc.contracts/snapshot_test/: CMakeLists.txt
actc.contracts/social/: CMakeLists.txt  social.cpp
actc.contracts/stltest/: stltest.cpp
actc.contracts/test.inline/: CMakeLists.txt  test.inline.cpp  test.inline.hpp
actc.contracts/test_api/: CMakeLists.txt  test_api.hpp  test_chain.cpp  test_compiler_builtins.cpp  test_datastream.cpp  test_permission.cpp
actc.contracts/test_api_db/: test_api_db.cpp  test_db.cpp
actc.contracts/test_api_mem/: test_memory.cpp
actc.contracts/test_api_multi_index/: test_multi_index.cpp
actc.contracts/test_ram_limit/: CMakeLists.txt  test_ram_limit.abi
actc.contracts/tests/: CMakeLists.txt  actc.msig_tests.cpp  actc.system_tester.hpp  actc.system_tests.cpp  actc.token_tests.cpp  actc.wrap_tests.cpp  contracts.hpp.in  main.cpp
actc.contracts/tic_tac_toe/: CMakeLists.txt  tic_tac_toe.hpp
libraries/testing/: CMakeLists.txt  tester.cpp  tester_network.cpp
libraries/utilities/: CMakeLists.txt  git_revision.cpp.in  key_conversion.cpp  string_escape.cpp  tempdir.cpp  words.cpp
programs/actc-blocklog/: CMakeLists.txt  main.cpp
programs/dccio-blocklog/: CMakeLists.txt  main.cpp
roxe.cdt/: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  IMPORTANT.md  README.md  build.sh  install.sh  pipeline.jsonc
roxe.cdt/.buildkite/: pipeline.yml
roxe.cdt/.cicd/: pipeline.yml  submodule-regression-checker.sh
roxe.cdt/.cicd/helpers/: docker-hash.sh
roxe.cdt/.cicd/metrics/: test-metrics.js
roxe.cdt/actc_llvm/: .gitmodules
roxe.cdt/docker/: install_deb.sh
roxe.cdt/docs/guides/: cmake.md  first-smart-contract.md  generator-attributes.md  native-tester.md
roxe.cdt/docs/tools/: roxe-abidiff.md  roxe-abigen.md  roxe-init.md  roxe-ld.md
roxe.cdt/docs/upgrading/: 1.2-to-1.3.md
roxe.cdt/examples/hello/: CMakeLists.txt  README.txt
roxe.cdt/examples/multi_index_example/: CMakeLists.txt  README.txt
roxe.cdt/examples/send_inline/: README.txt
roxe.cdt/libraries/actclib/: action.hpp  permission.h  print.hpp  serialize.hpp
roxe.cdt/modules/: ClangExternalProject.txt  InstallCDT.cmake  LibrariesExternalProject.txt  RoxeCDTMacros.cmake.in  TestsExternalProject.txt  ToolsExternalProject.txt  actcWasmToolchain.cmake.in  roxe.cdt-config.cmake  roxeLibConfig.cmake.in
roxe.cdt/scripts/: generate_bottle.sh  generate_tarball.sh  roxe_build_amazon.sh  roxe_build_centos.sh  roxe_build_darwin.sh  roxe_build_fedora.sh  roxe_build_ubuntu.sh
roxe.cdt/tests/: CMakeLists.txt  Cluster.py  Node.py  TestHelper.py  WalletMgr.py  chain_plugin_tests.cpp  db_modes_test.sh  distributed-transactions-remote-test.py  get_table_tests.cpp  impaired_network.py  lossy_network.py  main.cpp  nodroxe_forked_chain_test.py  nodroxe_voting_test.py  p2p_stress.py  release-build.sh  validate-dirty-db.py  wallet_tests.cpp
roxe.cdt/tools/: CMakeLists.txt
roxe.cdt_old/libraries/: CMakeLists.txt
roxe.contracts/: CMakeLists.txt  CONTRIBUTING.md  IMPORTANT.md  README.md  build.sh  docs.json  pipeline.jsonc
roxe.contracts/contracts/: CMakeLists.txt
roxe.contracts/docker/: buildContracts.sh  environment.dockerpart  unit-test.sh  verifyInstallation.sh
roxe.contracts/docs/: 02_build-and-deploy.md  index.md
roxe.contracts/scripts/: .environment  helper.sh
roxe.contracts/tests/: CMakeLists.txt  contracts.hpp.in  gls.system_tester.hpp  main.cpp  roxe.msig_tests.cpp  roxe.system_tester.hpp  roxe.system_tests.cpp  roxe.token_tests.cpp  roxe.wrap_tests.cpp  test_symbol.hpp
(+1718 files in other folders)
